--- a/tutorials/tutorials.html
+++ b/tutorials/tutorials.html
@@ -21,6 +21,7 @@
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="#">Tutorials</a></li>
+          <li><a href="overview.html">Overview</a></li>
           <li><a href="#">Examples</a></li>
         </ul>
         <h3 class="text-muted">Project Implicit Player</h3>
