--- a/tutorials/overview.html
+++ b/tutorials/overview.html
@@ -1,43 +1,81 @@
-<h1>Project Implicit Player (PIP)</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<p>The PIP is a time sensitive, cognitive psychology, experiment builder for the Internet.
-It is written in JavaScript and is built to be extremely versatile and customizable.</p>
+    <title>PIP Tutorials</title>
 
-<p>The scripts for the PIP are written as JavaScript objects.
-This format allows, on one hand, the writing of simple and straightforward scripts using a constrained scripting language.
-And on the other hand, allows advanced users to easily create extremely complex and dynamic scripts using in-line JavaScript.</p>
+    <!-- Bootstrap core CSS -->
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet">
 
-<h3>Central Concepts</h3>
+    <!-- Custom styles for this template -->
+    <link href="css/jumbotron-narrow.css" rel="stylesheet">
+  </head>
 
-<p>The PIP treats each task as a <strong>sequence</strong> of <strong>trials</strong>.</p>
+  <body>
 
-<p><strong>Trials</strong> do three things:</p>
+    <div class="container-narrow">
+      <div class="header">
+        <ul class="nav nav-pills pull-right">
+          <li><a href="tutorials.html">Tutorials</a></li>
+          <li class="active"><a href="#">Overview</a></li>
+          <li><a href="#">Examples</a></li>
+        </ul>
+        <h3 class="text-muted">Project Implicit Player</h3>
+      </div>
 
-<ul>
-<li>Control stimuli presentation</li>
-<li>Evaluate user responses</li>
-<li>Respond to user responses (give feedback, finish trial etc.)</li>
-</ul>
+		<h1>Project Implicit Player (PIP)</h1>
 
-<p>The PIP treats each trial as composed of three types of objects. <strong>Trial</strong> objects are the frame for the trial, and are responsible for anything that 'happens' in the trial. <strong>Media</strong> objects are responsible for <em>what</em> we show the user - be it text, images or any other form of media. <strong>Stimuli</strong> objects are the <em>how</em> for the <em>what</em> of the media objects - they control the size, location etc. of their respective media. Each Stimuli has to have exactly one Media, but the Trials may have multiple stimuli.
-These objects (Trials, Stimuli and Media) that are the building blocks of your task may be grouped into <strong>Sets</strong>. The Sets are used to organize and randomize their members.</p>
+		<p>The PIP is a time sensitive, cognitive psychology, experiment builder for the Internet.
+		It is written in JavaScript and is built to be extremely versatile and customizable.</p>
 
-<p>The PIP supports a powerful system for the generation and randomization of trial <strong>sequences</strong>.
-Trials are consecutive, in that there cannot be more than one trial at a time, and each trial has the power to change just about anything in the players' behavior (It is possible to jump between trials though).</p>
+		<p>The scripts for the PIP are written as JavaScript objects.
+		This format allows, on one hand, the writing of simple and straightforward scripts using a constrained scripting language.
+		And on the other hand, allows advanced users to easily create extremely complex and dynamic scripts using in-line JavaScript.</p>
 
-<ul>
-<li>Trials within a sequence may be duplicated, reordered and selected using powerful mixing tools.</li>
-<li>Trials may inherit their features from custom prototypes.</li>
-<li>Trials may be randomly picked from custom lists (<strong>sets</strong>).</li>
-</ul>
+		<h3>Central Concepts</h3>
 
-<h3>Creating a Task</h3>
+		<p>The PIP treats each task as a <strong>sequence</strong> of <strong>trials</strong>.</p>
 
-<p>When creating a task you first create your building blocks. You create prototypes for each trial type you intend to use and create sets of stimuli for later use.
-Next, you drop the building blocks into the sequence; at this stage you decide on the global structure of your task and create the exact randomization that you want.</p>
+		<p><strong>Trials</strong> do three things:</p>
 
-<p>Once your script is ready all you have to do is to call it from within the PIP index page.</p>
+		<ul>
+		<li>Control stimuli presentation</li>
+		<li>Evaluate user responses</li>
+		<li>Respond to user responses (give feedback, finish trial etc.)</li>
+		</ul>
 
-<h3>Collecting the data</h3>
+		<p>The PIP treats each trial as composed of three types of objects. <strong>Trial</strong> objects are the frame for the trial, and are responsible for anything that 'happens' in the trial. <strong>Media</strong> objects are responsible for <em>what</em> we show the user - be it text, images or any other form of media. <strong>Stimuli</strong> objects are the <em>how</em> for the <em>what</em> of the media objects - they control the size, location etc. of their respective media. Each Stimuli has to have exactly one Media, but the Trials may have multiple stimuli.
+		These objects (Trials, Stimuli and Media) that are the building blocks of your task may be grouped into <strong>Sets</strong>. The Sets are used to organize and randomize their members.</p>
 
-<p>All the data that is gathered by the PIP is sent to a URL of your choosing. Tasks may vary greatly so we give you the flexibility to send whatever data you need and process it however you see fit.</p>
+		<p>The PIP supports a powerful system for the generation and randomization of trial <strong>sequences</strong>.
+		Trials are consecutive, in that there cannot be more than one trial at a time, and each trial has the power to change just about anything in the players' behavior (It is possible to jump between trials though).</p>
+
+		<ul>
+		<li>Trials within a sequence may be duplicated, reordered and selected using powerful mixing tools.</li>
+		<li>Trials may inherit their features from custom prototypes.</li>
+		<li>Trials may be randomly picked from custom lists (<strong>sets</strong>).</li>
+		</ul>
+
+		<h3>Creating a Task</h3>
+
+		<p>When creating a task you first create your building blocks. You create prototypes for each trial type you intend to use and create sets of stimuli for later use.
+		Next, you drop the building blocks into the sequence; at this stage you decide on the global structure of your task and create the exact randomization that you want.</p>
+
+		<p>Once your script is ready all you have to do is to call it from within the PIP index page.</p>
+
+		<h3>Collecting the data</h3>
+
+		<p>All the data that is gathered by the PIP is sent to a URL of your choosing. Tasks may vary greatly so we give you the flexibility to send whatever data you need and process it however you see fit.</p>
+
+      <div class="footer">
+        <p><a href="https://implicit.harvard.edu/implicit/">&copy; Project Implicit 2013</a></p>
+      </div>
+
+    </div> <!-- /container -->
+
+  </body>
+</html>
