--- a/tutorials/tutorials.html
+++ b/tutorials/tutorials.html
@@ -37,26 +37,26 @@
         <div class="col-lg-6">
           <h4>
             <a href="../docs/trial.html">Trial</a>&nbsp;
-            <a target="_blank" href="../src/index.html?url=../tutorials/trial.js">&raquo;</a>
+            <a target="_blank" href="../dist/index.html?url=../tutorials/trial.js">&raquo;</a>
           </h4>
           <p>Basic trial structure; get to know the basics of creating a task.</p>
 
           <h4>
             <a href="../docs/stimulus.html">Stimulus</a>&nbsp;
-            <a target="_blank" href="../src/index.html?url=../tutorials/stimulus.js">&raquo;</a>
+            <a target="_blank" href="../dist/index.html?url=../tutorials/stimulus.js">&raquo;</a>
           </h4>
 
           <p>Stimuli and Media; learn how to create diverse stimuli.</p>
 
           <h4>
             <a href="../docs/input.html">Input</a>&nbsp;
-            <a target="_blank" href="../src/index.html?url=../tutorials/input.js">&raquo;</a>
+            <a target="_blank" href="../dist/index.html?url=../tutorials/input.js">&raquo;</a>
           </h4>
           <p>Manage the interface of your task. From key strokes to mouse clicks.</p>
 
           <h4>
             <a href="../docs/interactions.html">Interactions</a>&nbsp;
-            <a target="_blank" href="../src/index.html?url=../tutorials/interactions.js">&raquo;</a>
+            <a target="_blank" href="../dist/index.html?url=../tutorials/interactions.js">&raquo;</a>
           </h4>
 
           <p>This is where the PIP truly becomes interactive. Learn to create conditionals and trial actions.</p>
@@ -65,25 +65,25 @@
         <div class="col-lg-6">
           <h4>
             <a href="../docs/settings.html">Settings</a>&nbsp;
-            <a target="_blank" href="../src/index.html?url=../tutorials/settings.js">&raquo;</a>
+            <a target="_blank" href="../dist/index.html?url=../tutorials/settings.js">&raquo;</a>
           </h4>
           <p>Control the trial global settings.</p>
 
           <h4>
             <a href="../docs/sequence.html">Sequence</a>&nbsp;
-            <a target="_blank" href="../src/index.html?url=../tutorials/sequence.js">&raquo;</a>
+            <a target="_blank" href="../dist/index.html?url=../tutorials/sequence.js">&raquo;</a>
           </h4>
           <p>Control the order of you trial and use of the mixer.</p>
 
           <h4>
             <a href="../docs/inheritance.html">Inheritance</a>&nbsp;
-            <a target="_blank" href="../src/index.html?url=../tutorials/inheritance.js">&raquo;</a>
+            <a target="_blank" href="../dist/index.html?url=../tutorials/inheritance.js">&raquo;</a>
           </h4>
           <p>Randomization and prototyping using inheritance.</p>
 
           <h4>
             <a href="../docs/touch.html">Touch</a>&nbsp;
-            <a target="_blank" href="../src/index.html?url=../tutorials/touch.js">&raquo;</a>
+            <a target="_blank" href="../dist/index.html?url=../tutorials/touch.js">&raquo;</a>
           </h4>
           <p>Setting you task up for touch devices.</p>
         </div>
