--- a/tutorials/tutorials.html
+++ b/tutorials/tutorials.html
@@ -22,40 +22,40 @@
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="#">Tutorials</a></li>
           <li><a href="overview.html">Overview</a></li>
-          <li><a href="#">Examples</a></li>
+          <li><a href="examples.html">Examples</a></li>
         </ul>
         <h3 class="text-muted">Project Implicit Player</h3>
       </div>
 
       <div class="jumbotron">
         <h1>PIP tutorials</h1>
-        <p class="lead">These well documented code examples are the prime way to learn the basics of the PIP. After you've learnt the basics you can move on to the more complex exampels</p>
+        <p class="lead">These well documented code examples are the prime way to learn the basics of the PIP. After you've learnt the basics you can move on to the more complex examples</p>
         <p><small>Protip: click the &raquo; to activate the tutorial scripts.</small></p>
       </div>
 
       <div class="row marketing">
         <div class="col-lg-6">
           <h4>
-            <a href="../docs/trial.html">Trial</a>&nbsp;
+            <a href="../docs/tutorials/trial.html">Trial</a>&nbsp;
             <a target="_blank" href="../dist/index.html?url=../tutorials/trial.js">&raquo;</a>
           </h4>
           <p>Basic trial structure; get to know the basics of creating a task.</p>
 
           <h4>
-            <a href="../docs/stimulus.html">Stimulus</a>&nbsp;
+            <a href="../docs/tutorials/stimulus.html">Stimulus</a>&nbsp;
             <a target="_blank" href="../dist/index.html?url=../tutorials/stimulus.js">&raquo;</a>
           </h4>
 
           <p>Stimuli and Media; learn how to create diverse stimuli.</p>
 
           <h4>
-            <a href="../docs/input.html">Input</a>&nbsp;
+            <a href="../docs/tutorials/input.html">Input</a>&nbsp;
             <a target="_blank" href="../dist/index.html?url=../tutorials/input.js">&raquo;</a>
           </h4>
           <p>Manage the interface of your task. From key strokes to mouse clicks.</p>
 
           <h4>
-            <a href="../docs/interactions.html">Interactions</a>&nbsp;
+            <a href="../docs/tutorials/interactions.html">Interactions</a>&nbsp;
             <a target="_blank" href="../dist/index.html?url=../tutorials/interactions.js">&raquo;</a>
           </h4>
 
@@ -64,25 +64,25 @@
 
         <div class="col-lg-6">
           <h4>
-            <a href="../docs/settings.html">Settings</a>&nbsp;
+            <a href="../docs/tutorials/settings.html">Settings</a>&nbsp;
             <a target="_blank" href="../dist/index.html?url=../tutorials/settings.js">&raquo;</a>
           </h4>
           <p>Control the trial global settings.</p>
 
           <h4>
-            <a href="../docs/sequence.html">Sequence</a>&nbsp;
+            <a href="../docs/tutorials/sequence.html">Sequence</a>&nbsp;
             <a target="_blank" href="../dist/index.html?url=../tutorials/sequence.js">&raquo;</a>
           </h4>
           <p>Control the order of you trial and use of the mixer.</p>
 
           <h4>
-            <a href="../docs/inheritance.html">Inheritance</a>&nbsp;
+            <a href="../docs/tutorials/inheritance.html">Inheritance</a>&nbsp;
             <a target="_blank" href="../dist/index.html?url=../tutorials/inheritance.js">&raquo;</a>
           </h4>
           <p>Randomization and prototyping using inheritance.</p>
 
           <h4>
-            <a href="../docs/touch.html">Touch</a>&nbsp;
+            <a href="../docs/tutorials/touch.html">Touch</a>&nbsp;
             <a target="_blank" href="../dist/index.html?url=../tutorials/touch.js">&raquo;</a>
           </h4>
           <p>Setting you task up for touch devices.</p>
