setting up documentation for IAT component example

--- a/tutorials/examples.html
+++ b/tutorials/examples.html
@@ -20,8 +20,8 @@
     <div class="container-narrow">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li><a href="tutorials.html">Tutorials</a></li>
           <li><a href="overview.html">Overview</a></li>
+          <li><a href="tutorials.html">Tutorials</a></li>
           <li class="active"><a href="#">Examples</a></li>
         </ul>
         <h3 class="text-muted">Project Implicit Player</h3>
@@ -36,20 +36,19 @@
       <div class="row marketing">
         <div class="col-lg-6">
           <h4>
-            <a href="../docs/examples/iat.html">Trial</a>&nbsp;
+            <a href="../docs/examples/iat.html">Race IAT</a>&nbsp;
             <a target="_blank" href="../dist/index.html?url=../examples/iat.js">&raquo;</a>
           </h4>
-          <p>The classic IAT comparing Black and white people.</p>
+          <p>The classic Race IAT comparing Black and white people. Using the full fledged PIP.</p>
         </div>
 
+
         <div class="col-lg-6">
-          <!--
           <h4>
-            <a href="../docs/tutorials/settings.html">Settings</a>&nbsp;
-            <a target="_blank" href="../dist/index.html?url=../tutorials/settings.js">&raquo;</a>
+            <a href="../docs/examples/iat_component_short.html">Race IAT (using IAT component)</a>&nbsp;
+            <a target="_blank" href="../dist/index.html?url=../examples/iat_component_short.js">&raquo;</a>
           </h4>
-          <p>Control the trial global settings.</p>
-          -->
+          <p>A Minimalistic version of the Race IAT using the IATcomponent. If all you want is to get an IAT running as fast as possible, this is the sollution for you.</p>
         </div>
       </div>
 
