--- a/tutorials/overview.html
+++ b/tutorials/overview.html
@@ -20,9 +20,9 @@
     <div class="container-narrow">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li><a href="tutorials.html">Tutorials</a></li>
           <li class="active"><a href="#">Overview</a></li>
-          <li><a href="#">Examples</a></li>
+          <li><a href="tutorials.html">Tutorials</a></li>
+          <li><a href="examples.html">Examples</a></li>
         </ul>
         <h3 class="text-muted">Project Implicit Player</h3>
       </div>
@@ -49,13 +49,13 @@
 		</ul>
 
 		<p>Trials are implemented with a <strong>Trial</strong> object. The Trial object is responsible for anything that 'happens' in the trial (e.g., presentation of stimuli).
-		The trial object uses several other objects, the most important of them are the <strong>Stimulus</strong> and the <strong>Media</strong> objects. 
+		The trial object uses several other objects, the most important of them are the <strong>Stimulus</strong> and the <strong>Media</strong> objects.
 		<strong>Media</strong> objects are responsible for <em>what</em> we show the user (text, images or any other form of media).
-		<strong>Stimuli</strong> objects are the <em>how</em> for the <em>what</em> of the media objects - they control the size, location etc. of their respective media. 
+		<strong>Stimuli</strong> objects are the <em>how</em> for the <em>what</em> of the media objects - they control the size, location etc. of their respective media.
 		Each stimulus has one Media object. A Trial object may have multiple stimulus objects.<br/><br/>
 		Trials, Stimuli and Media are the main building blocks of your task. Often, you will want to group them into <strong>Sets</strong>. The Sets are used to organize and randomize their members.</p>
 
-		<p>There cannot be more than one trial at a time, and each trial can change just about anything in the player's behavior. 
+		<p>There cannot be more than one trial at a time, and each trial can change just about anything in the player's behavior.
 		The player supports a powerful system for the generation and randomization of trial <strong>sequences</strong>.
 		</p>
 
