long IAT component example

--- a/tutorials/examples.html
+++ b/tutorials/examples.html
@@ -40,15 +40,22 @@
             <a target="_blank" href="../dist/index.html?url=../examples/iat.js">&raquo;</a>
           </h4>
           <p>The classic Race IAT comparing Black and white people. Using the full fledged PIP.</p>
+
+          <h4>
+            <a href="../docs/examples/iat_component_short.html">Race IAT (component - minimalistic)</a>&nbsp;
+            <a target="_blank" href="../dist/index.html?url=../examples/iat_component_short.js">&raquo;</a>
+          </h4>
+          <p>A Minimalistic version of the Race IAT using the IATcomponent. If all you want is to get an IAT running as fast as possible, this is the sollution for you.</p>
+
         </div>
 
 
         <div class="col-lg-6">
           <h4>
-            <a href="../docs/examples/iat_component_short.html">Race IAT (using IAT component)</a>&nbsp;
-            <a target="_blank" href="../dist/index.html?url=../examples/iat_component_short.js">&raquo;</a>
+            <a href="../docs/examples/iat_component_long.html">Race IAT (component - extensive)</a>&nbsp;
+            <a target="_blank" href="../dist/index.html?url=../examples/iat_component_long.js">&raquo;</a>
           </h4>
-          <p>A Minimalistic version of the Race IAT using the IATcomponent. If all you want is to get an IAT running as fast as possible, this is the sollution for you.</p>
+          <p>An extensive version of the Race IAT using the IATcomponent. This is an example of how to deeply modify the IAT component to your needs.</p>
         </div>
       </div>
 
