feat(API): update API to return a plain script, major changes to internal treatment of globals

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,9 @@
 
 		<script type="text/javascript">
 			require(['js/config'], function() {
-				require([getParameterByName('url') || '../resources/examples/iat.js']);
+				require(['app/activatePIP', getParameterByName('url') || '../resources/examples/iat.js'], function(activatePIP, script){
+					activatePIP(script);
+				});
 			});
 		</script>
 	</body>
