--- a/0.3/tutorials/playground.html
+++ b/0.3/tutorials/playground.html
@@ -102,7 +102,7 @@
 						</li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="https://github.com/ProjectImplicit/PIPlayer">Github</a></li>
+						<li><a href="#">Github</a></li>
 					</ul>
 				</nav>
 			</div>
